{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 49,
  "lineage": "8c7f6db3-aa12-53ae-51df-f6c75d23e048",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5005"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-06T12:19:32.021-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/vamos-aplikacje-w-chmurze/global/firewalls/allow-backend",
            "log_config": [],
            "name": "allow-backend",
            "network": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/global/networks/private-network",
            "priority": 1000,
            "project": "vamos-aplikacje-w-chmurze",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/global/firewalls/allow-backend",
            "source_ranges": [
              "192.168.56.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-backend"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-06T12:19:32.174-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/vamos-aplikacje-w-chmurze/global/firewalls/allow-db",
            "log_config": [],
            "name": "allow-db",
            "network": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/global/networks/private-network",
            "priority": 1000,
            "project": "vamos-aplikacje-w-chmurze",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/global/firewalls/allow-db",
            "source_ranges": [
              "192.168.56.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-db"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-06T12:19:31.588-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/vamos-aplikacje-w-chmurze/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/global/networks/private-network",
            "priority": 1000,
            "project": "vamos-aplikacje-w-chmurze",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-06-05T07:56:09.522-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/vamos-aplikacje-w-chmurze/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/global/networks/private-network",
            "priority": 1000,
            "project": "vamos-aplikacje-w-chmurze",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/global/firewalls/allow-internal",
            "source_ranges": [
              "192.168.56.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-05T06:46:24.350-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/vamos-aplikacje-w-chmurze/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/global/networks/private-network",
            "priority": 1000,
            "project": "vamos-aplikacje-w-chmurze",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-2204-jammy-v20250530",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/zones/europe-west3-a/disks/ansible"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-06-05T05:27:54.638-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/vamos-aplikacje-w-chmurze/zones/europe-west3-a/instances/ansible",
            "instance_id": "7508313786708407205",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "HykMwu40Ja0=",
            "name": "ansible",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.40.44.163",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/global/networks/private-network",
                "network_ip": "192.168.56.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/regions/europe-west3/subnetworks/private-subnet",
                "subnetwork_project": "vamos-aplikacje-w-chmurze"
              }
            ],
            "project": "vamos-aplikacje-w-chmurze",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/zones/europe-west3-a/instances/ansible",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh"
            ],
            "tags_fingerprint": "SFX9LNAOdG8=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west3-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.private_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-2204-jammy-v20250530",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/zones/europe-west3-a/disks/db"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-06-05T05:27:55.038-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/vamos-aplikacje-w-chmurze/zones/europe-west3-a/instances/db",
            "instance_id": "6027761525243786149",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "kulka:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQC2TIkUI2bRWkXigazLjK+sYtD2HkfMZHhUf2Qbl9ioZlg/fVvc8WkHcIbKKec/4xbgJ3mb9ELLzcsGwU9LIcP/HJnsdfISgssQkkCzMOX9BroefFaVSPG4OaN8cN7Rv/dYkXrbPCE5wyJy4SPp09fNE+2n1MaNgTunZhLwjmE0gosswZZrvBDpZpvQIhLdNssg3N173++o9v9fkmkFIlWuWuUHeBKvr8f+FvxotU2yGkukVG1Cf1JI2dsnFci2KSG2KuvgkK7VZ+lSCsZykrbbLBNDNKbtD5sfevyEHFQcqXHTvvgXaVhd8CuskasdTYp4i+zlot/r+VmOTnlCxUGr DESKTOP-LNMTMGG\\kulka@DESKTOP-LNMTMGG\n"
            },
            "metadata_fingerprint": "orKEURWOaUM=",
            "name": "db",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/global/networks/private-network",
                "network_ip": "192.168.56.11",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/regions/europe-west3/subnetworks/private-subnet",
                "subnetwork_project": "vamos-aplikacje-w-chmurze"
              }
            ],
            "project": "vamos-aplikacje-w-chmurze",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/zones/europe-west3-a/instances/db",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-db"
            ],
            "tags_fingerprint": "qKo_V_mNsNM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west3-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.private_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-2204-jammy-v20250530",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/zones/europe-west3-a/disks/backend"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-06-05T05:27:55.350-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/vamos-aplikacje-w-chmurze/zones/europe-west3-a/instances/backend",
            "instance_id": "7148967075781555108",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "kulka:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQC2TIkUI2bRWkXigazLjK+sYtD2HkfMZHhUf2Qbl9ioZlg/fVvc8WkHcIbKKec/4xbgJ3mb9ELLzcsGwU9LIcP/HJnsdfISgssQkkCzMOX9BroefFaVSPG4OaN8cN7Rv/dYkXrbPCE5wyJy4SPp09fNE+2n1MaNgTunZhLwjmE0gosswZZrvBDpZpvQIhLdNssg3N173++o9v9fkmkFIlWuWuUHeBKvr8f+FvxotU2yGkukVG1Cf1JI2dsnFci2KSG2KuvgkK7VZ+lSCsZykrbbLBNDNKbtD5sfevyEHFQcqXHTvvgXaVhd8CuskasdTYp4i+zlot/r+VmOTnlCxUGr DESKTOP-LNMTMGG\\kulka@DESKTOP-LNMTMGG\n"
            },
            "metadata_fingerprint": "orKEURWOaUM=",
            "name": "backend",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/global/networks/private-network",
                "network_ip": "192.168.56.12",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/regions/europe-west3/subnetworks/private-subnet",
                "subnetwork_project": "vamos-aplikacje-w-chmurze"
              }
            ],
            "project": "vamos-aplikacje-w-chmurze",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/zones/europe-west3-a/instances/backend",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-backend"
            ],
            "tags_fingerprint": "nE35XyYB2Y0=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west3-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.private_subnet"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-2204-jammy-v20250530",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/zones/europe-west3-a/disks/frontend"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-06-05T05:27:54.464-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/vamos-aplikacje-w-chmurze/zones/europe-west3-a/instances/frontend",
            "instance_id": "6748910555994272677",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "kulka:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQC2TIkUI2bRWkXigazLjK+sYtD2HkfMZHhUf2Qbl9ioZlg/fVvc8WkHcIbKKec/4xbgJ3mb9ELLzcsGwU9LIcP/HJnsdfISgssQkkCzMOX9BroefFaVSPG4OaN8cN7Rv/dYkXrbPCE5wyJy4SPp09fNE+2n1MaNgTunZhLwjmE0gosswZZrvBDpZpvQIhLdNssg3N173++o9v9fkmkFIlWuWuUHeBKvr8f+FvxotU2yGkukVG1Cf1JI2dsnFci2KSG2KuvgkK7VZ+lSCsZykrbbLBNDNKbtD5sfevyEHFQcqXHTvvgXaVhd8CuskasdTYp4i+zlot/r+VmOTnlCxUGr DESKTOP-LNMTMGG\\kulka@DESKTOP-LNMTMGG\n"
            },
            "metadata_fingerprint": "orKEURWOaUM=",
            "name": "frontend",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.40.33.164",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/global/networks/private-network",
                "network_ip": "192.168.56.13",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/regions/europe-west3/subnetworks/private-subnet",
                "subnetwork_project": "vamos-aplikacje-w-chmurze"
              }
            ],
            "project": "vamos-aplikacje-w-chmurze",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/zones/europe-west3-a/instances/frontend",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-http",
              "allow-ssh"
            ],
            "tags_fingerprint": "LfyOV3jN6cE=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west3-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/vamos-aplikacje-w-chmurze/global/networks/private-network",
            "mtu": 0,
            "name": "private-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "1431200771020174322",
            "numeric_id": "1431200771020174322",
            "project": "vamos-aplikacje-w-chmurze",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/global/networks/private-network"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-05T07:56:09.334-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/vamos-aplikacje-w-chmurze/regions/europe-west3/routers/nat-router",
            "name": "nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/global/networks/private-network",
            "project": "vamos-aplikacje-w-chmurze",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/regions/europe-west3/routers/nat-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "vamos-aplikacje-w-chmurze/europe-west3/nat-router/nat-config",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-config",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "vamos-aplikacje-w-chmurze",
            "region": "europe-west3",
            "router": "nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_router.nat_router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-05T05:27:31.797-07:00",
            "enable_flow_logs": false,
            "gateway_address": "192.168.56.1",
            "id": "projects/vamos-aplikacje-w-chmurze/regions/europe-west3/subnetworks/private-subnet",
            "ip_cidr_range": "192.168.56.0/24",
            "name": "private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/global/networks/private-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "vamos-aplikacje-w-chmurze",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vamos-aplikacje-w-chmurze/regions/europe-west3/subnetworks/private-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 6365721485174911964
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}